Project

General

Profile

Actions

Bug #4070

closed

memory leak

Added by Loïc Dachary about 11 years ago. Updated about 11 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
common
Target version:
-
% Done:

0%

Source:
Development
Tags:
Backport:
Regression:
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

The assignment operator of buffer::ptr leaks when the object is assigned to itself. After

buffer::ptr a(1);
a = a;

a call to a.get_raw() will return a null pointer and there will be no pointer referencing the original buffer::raw object although its reference count is 1.

Actions #1

Updated by Loïc Dachary about 11 years ago

Here is the proposed fix https://github.com/ceph/ceph/pull/44

Actions #2

Updated by Josh Durgin about 11 years ago

  • Status changed from New to Resolved
Actions

Also available in: Atom PDF